Closed Bug 143316 Opened 23 years ago Closed 23 years ago

Mac: keyboad events not working with all full-page plugins

Categories

(Core Graveyard :: Plug-ins, defect, P1)

PowerPC
All
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: shrir, Assigned: peterl-bugs)

References

()

Details

(Whiteboard: [ADT1 RTM][PL RTM] custrtm-)

Attachments

(2 files)

mac only, 0509 branch build. go to the url. try to type in the textbox...click on submit. nothing happens. :(
peterl..
Assignee: beppe → peterl
Keywords: adt1.0.0, nsbeta1
...one line fix on the way, testing in Carbon now...
Status: NEW → ASSIGNED
Attached patch 1-line patchSplinter Review
This apprently looks like it was caused by bug 84681. This patch removes one of the hacked lines inserted from that bug.
Does not it regress back to that bug now?
oddly, no! I tested and it and works in both Classic/Carbon. That's an old bug and our event system keeps playing tricks on me.
adding ADT marker and milestone
Priority: -- → P2
Whiteboard: [ADT1+]
Target Milestone: --- → mozilla1.0
OS: Mac System 9.x → All
Hardware: PC → Macintosh
Whiteboard: [ADT1+] → [ADT1+][PL RTM]
Please get a review and super review for this.
Blocks: 143047
Whiteboard: [ADT1+][PL RTM] → [ADT1 RTM][PL RTM]
Removing adt1.0.0, because the patch does not have r/sr=. Pls get the reviews, and land this on the trunk, then add adt1.0.0 keyword.
Keywords: adt1.0.0, nsbeta1nsbeta1+
Whiteboard: [ADT1 RTM][PL RTM] → [ADT1 RTM][PL RTM] [Needs r/sr=]
This bug has become more serious. It seems QT and Flash are both effected -- no keyboard events are working on any full-page plugins on Mac. This does not regress bug 84681. All full-page plugins on Mac are working correctly after this patch and this patch is in a #ifdef XP_MAC section.
Severity: major → blocker
Priority: P2 → P1
Summary: Acrobat: typing in forms does not work → Mac: keyboad events not working with all full-page plugins
Comment on attachment 82977 [details] [diff] [review] 1-line patch Fine with me. Peter also conducted massive testing with other plugins focussing on key input. r=av
Attachment #82977 - Flags: review+
Comment on attachment 82977 [details] [diff] [review] 1-line patch sr=attinasi - it would be nice to know why this stopped working though ;-)
Attachment #82977 - Flags: superreview+
Full-page plugins are very sensitve to event changes because they live at the document viewer level. In one of the many changes to events in the past year, plugin code is no longer incorrectly recieving double key events (wallpapered by bug 84681) but now correctly recieving single events. The code around this is still pretty messy so I've opened bug 144876 to clean up.
Keywords: approval
Whiteboard: [ADT1 RTM][PL RTM] [Needs r/sr=] → [ADT1 RTM][PL RTM] [Needs ADT+ and a=]
Keywords: adt1.0.0
patch on trunk, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
testing on OSX with the trunk build from 2002051608 functions correctly with the attached test case from comment #9
Quicktime testcase: http://starwars.apple.com/ep2/breathing/img/sw_ctp_240.mov Without the patch, the space bar does not start/stop the movie. Also note that there is no Acrobat 5 for Carbon.
adding adt1.0.0+. Please get drivers approval and then check into the 1.0 branch.
Keywords: adt1.0.0adt1.0.0+
Comment on attachment 82977 [details] [diff] [review] 1-line patch a=chofmann,brendan,etc need to check this in asap for rc3. -thanks
Attachment #82977 - Flags: approval+
patch on branch thanks everyone!
Keywords: approvalfixed1.0.0
Whiteboard: [ADT1 RTM][PL RTM] [Needs ADT+ and a=] → [ADT1 RTM][PL RTM]
yes, this works now on 0521 brnch on osx and 9.2. checked out flash , qktime and acrobat tests.
Keywords: verified1.0.0
Whiteboard: [ADT1 RTM][PL RTM] → [ADT1+ RTM][PL RTM]
Removing "+" from Status Whiteboard, as the bugs are plussed by the ADT in the Keywords.
Whiteboard: [ADT1+ RTM][PL RTM] → [ADT1 RTM][PL RTM]
Whiteboard: [ADT1 RTM][PL RTM] → [ADT1 RTM][PL RTM] custrtm-
Marking this Verified Fixed Testing against Mac OSX Mozilla 2003050803 trunk Tested keyboard events with Full Screen QuickTime plugin successfully: Go to: http://www.apple.com/trailers/disney/finding_nemo/trailer/ choose Full Screen option Tested keyboard events against Flash testcase in comment #9
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: