Fixing keyboard events with full page plugins on Mac bug 143316 r=av sr=attinasi